0022849: Bad import of a STEP file (error during triangulation)